# 3dream-engine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CompileShaders.bat  clean.bat  log.txt
assets/scripts/: Environment.lua
include/: App.h  CMakeLists.txt  Common.h  EntryPoint.h  Game.h
include/D3E/: App.h  AssetManager.h  CommonCpp.h  CommonHeader.h  CrowdConfig.h  Debug.h  EntryPoint.h  Game.h  Timer.h  TimerHandle.h  TimerManager.h  Uuid.h
include/D3E/Components/: AiAgentComponent.h  AiComponent.h  BaseComponent.h  FPSControllerComponent.h  MouseComponent.h  NavmeshComponent.h  ObjectInfoComponent.h  PhysicsCharacterComponent.h  PhysicsComponent.h  ScriptComponent.h  TPSControllerComponent.cpp  TPSControllerComponent.h  TransformComponent.h  UserScript.h
include/D3E/ai/: Action.h  Agent.h  FSM.h  FunctionalAction.h  Goal.h  GoapPlanner.h  State.h
include/D3E/engine/: ConsoleManager.h  ConsoleVariable.h  FloatConsoleVariable.h  IntConsoleVariable.h
include/D3E/render/: Material.h
include/D3E/scripting/: ScriptingEngine.h
include/D3E/structures/: PriorityQueue.h
include/D3E/systems/: CreationSystems.h  GameSystem.h  PerRenderTickSystem.h  PerTickSystem.h  RenderSystem.h
include/D3E/time/: Time.h
libs/: CMakeLists.txt
libs/DirectXTK12/: .gitignore  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
libs/EASTL/: CMakeLists.txt
libs/FMOD/: CMakeLists.txt
libs/RmlUi/: .gitignore  CMakeLists.txt
libs/assimp/: .gitignore  CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/imguizmo/: CMakeLists.txt
misc/: UITest.lua  imgui.ini
samples/Character/: CMakeLists.txt
samples/Character/assets/scripts/: CollisionTest.lua
samples/Character/src/: CharacterGame.cpp  CharacterGame.h
samples/Cube/: CMakeLists.txt
samples/Cube/src/: CubeGame.cpp  CubeGame.h
samples/Ducks/: CMakeLists.txt
samples/Ducks/src/: DuckGame.cpp  DuckGame.h
samples/EmptyProject/: CMakeLists.txt
samples/EmptyProject/src/: EmptyGame.cpp  EmptyGame.h
samples/HelloWorld/: CMakeLists.txt
samples/HelloWorld/src/: HelloWorldApp.cpp  HelloWorldApp.h
samples/NewCube/: CMakeLists.txt  CMakeSettings.json
samples/NewCube/src/: NewCubeGame.cpp  NewCubeGame.h
samples/ScriptingSandbox/: CMakeLists.txt
samples/ScriptingSandbox/scripts/: Duck.lua
samples/ScriptingSandbox/src/: ScriptingSandbox.cpp  ScriptingSandbox.h
scripts/: Environment.lua
shaders/: Bare.hlsl  Base3d.hlsl  Csm.hlsl  DebugDraw.hlsl  Downsample.hlsl  DownsampleArray.hlsl  EditorHighlightPass.hlsl  Equirect2Cube.hlsl  GBuffer.hlsl  IblPass.hlsl  IrMap.hlsl  LightPass.hlsl  LightPassCommon.hlsl  Pick.hlsl  PointLightPass.hlsl  RmlUi.hlsl  RmlUiCol.hlsl  SimpleForward.hlsl  Skybox.hlsl  SpBrdf.hlsl  SpMap.hlsl  Test.hlsl  Tonemap.hlsl  list.config
src/: EntryPoint.cpp  main.cpp
src/RmlSolLua/bind/: Context.cpp  Convert.cpp  DataModel.cpp  Document.cpp  Element.cpp  ElementDerived.cpp  ElementForm.cpp
src/ai/: Action.cpp  Action.h  Agent.cpp  Agent.h  FSM.cpp  FunctionlAgent.cpp  Goal.h  GoapPlanner.h  State.cpp
src/ai/graph/: Edge.h  (+1 more)
src/assetmng/: AssetManager.cpp  CDialogEventHandler.cpp  CDialogEventHandler.h  DefaultAssetLoader.cpp  DefaultAssetLoader.h  Material.cpp  MaterialFactory.cpp  MaterialFactory.h  MeshData.h  MeshFactory.cpp  MeshFactory.h  MeshMetaData.cpp  MeshMetaData.h  ScriptData.h  ScriptFactory.cpp  ScriptFactory.h  ScriptMetaData.cpp  ScriptMetaData.h  SkyMeshData.h  SkyboxVertex.h  SoundMetaData.cpp  SoundMetaData.h  Texture2DMetaData.cpp  Texture2DMetaData.h  TextureFactory.cpp  TextureFactory.h
src/components/: AiAgentComponent.cpp  AiComponent.cpp  FPSControllerComponent.cpp  MouseComponent.cpp  NavigationAgentComponent.cpp  NavmeshComponent.cpp  ObjectInfoComponent.cpp  PhysicsCharacterComponent.cpp  PhysicsComponent.cpp  ScriptComponent.cpp  TPSControllerComponent.cpp  TransformComponent.cpp
src/core/: App.cpp  Common.h  Delegates.cpp  Delegates.h  EngineState.cpp  EngineState.h  Game.cpp  Game.h
src/editor/: ComponentCreationWindow.cpp  ComponentCreationWindow.h  Editor.cpp  Editor.h  EditorConsole.cpp  EditorConsole.h  EditorContentBrowser.cpp  EditorContentBrowser.h  EditorIdManager.cpp  EditorIdManager.h  EditorUtils.cpp  EditorUtils.h  MaterialEditor.cpp  MaterialEditor.h
src/engine/: ComponentFactory.cpp  ComponentFactory.h  ConsoleManager.cpp  PrefabMetadata.h
src/game_ui/: GameUi.cpp  GameUi.h
src/imgui_backend/: imgui_impl_nvrhi.cpp  imgui_impl_nvrhi.h  imgui_nvrhi.cpp  imgui_nvrhi.h
src/input/: InputDevice.cpp  InputDevice.h  Keys.h
src/navigation/: Context.cpp  Context.h  NavigationManager.cpp  NavigationManager.h  NavmeshBuilder.cpp  NavmeshBuilder.h  NavmeshConfig.h  NavmeshCore.h  NavmeshManager.cpp  NavmeshManager.h  PerformanceTimer.cpp  PerformanceTimer.h
src/physics/: JoltContactListener.cpp  JoltContactListener.h  JoltDebugRenderer.cpp  JoltDebugRenderer.h  ObjectLayers.h  PhysicsInfo.cpp  PhysicsInfo.h
src/render/: BaseRenderComponent.cpp  BaseRenderComponent.h  CameraUtils.cpp  CameraUtils.h  Csm.cpp  Csm.h  CsmConstBuffer.h  D3dUtil.cpp  D3dUtil.h  DebugRenderer.cpp  DebugRenderer.h  Display.h  DisplayWin32.cpp  DisplayWin32.h  GBuffer.cpp  GBuffer.h  GameRender.cpp  GameRender.h  GameRenderD3D12.cpp  GameRenderD3D12.h  GeometryGenerator.cpp  GeometryGenerator.h  IblConstBuffer.h  LightConstBuffer.h  LightPass.cpp  LightPass.h  LightVolumeConstBuffer.h  NvrhiMessageCallback.h  PbrUtils.cpp  PbrUtils.h  PerObjectConstBuffer.h  PickConstBuffer.h  PointLightConstBuffer.h  RenderUtils.cpp  RenderUtils.h  ShaderFactory.cpp  ShaderFactory.h  SkyboxCB.h  Vertex.h  VertexIndexBufferInfo.h  (+1 more)
src/rmlui_backend/: rmlui_backend.cpp  rmlui_backend.h
src/scripting/: EngineTypeBindings.h  LuaECSAdapter.cpp  LuaECSAdapter.h  ScriptingEngine.cpp
src/sound_engine/: SoundEngine.cpp  SoundEngine.h  SoundEngineCommon.h
src/time/: Time.cpp
src/timers/: Timer.cpp  TimerHandle.cpp  TimerManager.cpp
src/utils/: Debug.cpp  Debug.h  ECSUtils.cpp  ECSUtils.h  FilenameUtils.cpp  FilenameUtils.h  MeshUtils.h  Uuid.cpp
(+79 files in other folders)
